cluster/core/networking/external-gateway/resources/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: external-gateway
  namespace: networking
  annotations:
    cert-manager.io/cluster-issuer: cloudflare-production
spec:
  addresses:
    - type: IPAddress
      value: 192.168.3.51
  gatewayClassName: cilium
  listeners:
    - hostname: abraxis.tv
      name: abraxis-tv
      port: 443
      protocol: HTTPS
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - name: abraxis-tv

    - hostname: request.abraxis.tv
      name: request-abraxis-tv
      port: 443
      protocol: HTTPS
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - name: request-abraxis-tv

    - name: http-redirect
      port: 80
      protocol: HTTP
